update announcement bar

--- a/sections/announcement-bar.liquid
+++ b/sections/announcement-bar.liquid
@@ -17,11 +17,44 @@
 {% if social_icons %}
   {{ 'component-list-social.css' | asset_url | stylesheet_tag }}
 {% endif %}
+{%- assign grid_class = 'utility-bar__grid' -%}
 
+{%- if announcement_bar
+  and language_country_selector
+  and section.settings.phone_number != blank
+  and section.settings.show_social
+  and social_icons
+-%}
+  {%- assign grid_class = grid_class | append: ' utility-bar__grid--multi-col' -%}
+{%- elsif announcement_bar
+  and language_country_selector
+  or section.settings.phone_number != blank
+  and section.settings.show_social
+  and social_icons
+-%}
+  {%- assign grid_class = grid_class | append: ' utility-bar__grid--3-col' -%}
+{%- elsif language_country_selector or section.settings.show_social and social_icons -%}
+  {%- assign grid_class = grid_class | append: ' utility-bar__grid--2-col' -%}
+{%- endif -%}
 <div
   class="utility-bar color-{{ section.settings.color_scheme }} gradient{% if section.settings.show_line_separator and section.blocks.size > 0 %} utility-bar--bottom-border{% elsif section.settings.show_line_separator and section.settings.show_social and social_icons%} utility-bar--bottom-border-social-only{% endif %}{% if section.settings.enable_country_selector or section.settings.enable_language_selector %} header-localization{% endif %}"
 >
-  <div class="page-width utility-bar__grid{% if announcement_bar and language_country_selector or section.settings.show_social and social_icons %} utility-bar__grid--3-col{% elsif language_country_selector or section.settings.show_social and social_icons %} utility-bar__grid--2-col{% endif %}">
+  <div class="page-width {{ grid_class }}">
+    {% comment %}
+      <div class="
+      page-width utility-bar__grid{% if announcement_bar and language_country_selector or section.settings.show_social and social_icons %} utility-bar__grid--3-col{% elsif language_country_selector or section.settings.show_social and social_icons %} utility-bar__grid--2-col{% endif %}"></div>
+    {% endcomment %}
+    <div class="announcement-bar-phone">
+      {%- if section.settings.phone_number != blank -%}
+        <div class="contact-block">
+          <a href="tel:{{ section.settings.phone_number | replace: ' ', '' }}" class="announcement-link">
+            Call Us: {{ section.settings.phone_number }}
+          </a>
+        </div>
+      {%- else -%}
+        <p>Call Us: {{ section.settings.phone_number }}</p>
+      {%- endif -%}
+    </div>
     {%- if section.settings.show_social and social_icons -%}
       {%- render 'social-icons' -%}
     {%- endif -%}
@@ -172,6 +205,12 @@
   },
   "settings": [
     {
+      "type": "text",
+      "id": "phone_number",
+      "label": "Phone Number",
+      "default": "+00000000"
+    },
+    {
       "type": "checkbox",
       "id": "auto_rotate",
       "label": "t:sections.announcement-bar.settings.auto_rotate.label",
@@ -186,13 +225,13 @@
       "unit": "s",
       "label": "t:sections.announcement-bar.settings.change_slides_speed.label",
       "default": 5
-    },    
+    },
     {
       "type": "color_scheme",
       "id": "color_scheme",
       "label": "t:sections.all.colors.label",
       "default": "scheme-4"
-    },  
+    },
     {
       "type": "checkbox",
       "id": "show_line_separator",
@@ -205,8 +244,8 @@
     },
     {
       "type": "paragraph",
-         "content": "t:sections.announcement-bar.settings.paragraph.content"
-    },             
+      "content": "t:sections.announcement-bar.settings.paragraph.content"
+    },
     {
       "type": "checkbox",
       "id": "show_social",
