--- a/assets/base.css
+++ b/assets/base.css
@@ -2127,7 +2127,17 @@ input[type='checkbox'] {
   scale: 0.9;
 }
 
+.utility-bar__grid--multi-col {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 @media screen and (min-width: 990px) {
+  .utility-bar__grid--4-col {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
   .utility-bar__grid--3-col {
     grid-template-columns: 3fr 4fr 3fr;
     grid-template-areas: 'social-icons announcements language-currency';
@@ -2137,8 +2147,6 @@ input[type='checkbox'] {
     grid-template-columns: 1fr 1fr;
     grid-template-areas: 'social-icons language-currency';
   }
-
-  .announcement-bar.announcement-bar--one-announcement,
   .announcement-bar--one-announcement .announcement-bar__link {
     width: fit-content;
     margin: auto;
@@ -2148,7 +2156,7 @@ input[type='checkbox'] {
 .announcement-bar,
 .announcement-bar__announcement {
   color: rgb(var(--color-foreground));
-  width: 100%;
+  /* width: 100%; */
   height: 100%;
   display: flex;
   justify-content: center;
@@ -2206,6 +2214,18 @@ input[type='checkbox'] {
 .utility-bar .localization-wrapper .disclosure .localization-form__select,
 .utility-bar .localization-wrapper .disclosure__link {
   font-size: calc(var(--font-heading-scale) * 1.3rem);
+}
+
+.announcement-bar-phone .contact-block a {
+  color: #000;
+  text-decoration: none;
+  text-align: left;
+  padding: 1rem 0;
+  margin: 0;
+  letter-spacing: 0.1rem;
+  min-height: 3.8rem;
+  font-size: 13px;
+  display: block;
 }
 
 @media screen and (min-width: 990px) {
@@ -2385,7 +2405,7 @@ input[type='checkbox'] {
 
   .header--middle-left {
     grid-template-areas: 'heading navigation icons';
-    grid-template-columns: auto auto 1fr;
+    /* grid-template-columns: auto auto 1fr; */
     column-gap: 2rem;
   }
 
